# pystatslib

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  requirements.txt  scratch.cpp  setup.py  test.py
.github/workflows/: build.yml  test.yml
src/: _dens.cpp  _pystats_internals.hpp  dens.cpp  main.cpp  prob.cpp  rand.cpp
tests/: dens.py
